<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/main_sv_cdCoinsScrollView">

        <LinearLayout
            android:id="@+id/layout_dynamic_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_validate_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#F44336"
        android:padding="10dp"
        android:text="@string/main_tv_rebalanceCheckWarning"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_add_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#BAA919"
        android:text="@string/main_btn_addRecord" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/main_btn_save" />

    <Button
        android:id="@+id/btn_revert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:text="@string/main_btn_revert" />

    <Button
        android:id="@+id/btn_validate_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/main_btn_validateRecords" />

</LinearLayout>